refactored the pattern implementation to work with trident tuples. Currently the random forest test is working, the remaining still to be tested, and testing in a cluster is still outstanding